--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,11 +1,28 @@
 
 <div class="container">
-    <button type="button" class="btn btn-info" (click)="openModal()">New book</button>
-<div >
+<!-- <div >
     <app-modal [display]="block">
 
     </app-modal>
-</div>
+</div> -->
+<button type="button" class="btn btn-primary" (click)="openModal()">Insert book</button>
+    <div class="modal" tabindex="-1" role="dialog"  [ngStyle]="{'display':display}">
+         <div class="modal-dialog" role="document">
+               <div class="modal-content">
+                     <div class="modal-header">
+                           <h4 class="modal-title">Model Title</h4>
+                           <button type="button" class="close" aria-label="Close" (click)="onCloseHandled()"><span aria-hidden="true">&times;</span></button>
+                         </div>
+                <div class="modal-body">
+                           <app-book-form [bookId]="editBookId"></app-book-form>
+                         </div>
+                     <div class="modal-footer">
+                           <button type="button" class="btn btn-default" (click)="onCloseHandled()" >Close</button>
+                         </div>
+            </div>
+             </div>
+ </div>
+
     <div class="row">
         <div class="col">
             <table class="table">
@@ -31,7 +48,7 @@
                         <td>{{ calculateDiscountedPrice(book.basePrice, book.discountPercent) }}</td> 
                         <td>{{ book.discountPercent ? book.discountPercent : '/' }}</td>
                         <td>{{ book.available ? 'yes' : 'no'}}</td>
-                        <td><div class="btn btn-primary">Update</div></td>
+                        <td><div class="btn btn-primary" (click)="updateBook(book.id)">Update</div></td>
                         <td><div class="btn btn-danger" (click)="deleteBook(book.id)">Delete</div></td>
                     </tr>
                 </tbody>
