--- a/src/app/shared/components/books-gallery/books-gallery.component.html
+++ b/src/app/shared/components/books-gallery/books-gallery.component.html
@@ -2,7 +2,7 @@
     <ng-template ngFor let-book [ngForOf]="books" let-i="index" let-even = "even">
         <article class="book row g-0" [ngClass]="{'even-book': even}">
             <div class="col-sm">
-                <img src="assets/images/{{ book.image.url }}" alt="{{ book.image.alt }}" class="book-cover-picture">
+                <img src="assets/images/{{ book.imageUrl }}" alt="{{ book.imageAlt }}" class="book-cover-picture">
             </div>
             <div class="book-information col-lg-9 justify-content-between">
                 <div>
@@ -20,7 +20,7 @@
                             <div [ngClass]="{'crossed': book.discountId || book.discountId == 0}" class="old-price-text" *ngIf="getDiscoutPercentById(book.discountId) > 0">
                                 {{ (book.discountPercent ?  book.basePrice : book.basePrice) | currency:'EUR' }}
                             </div>
-                            <div class="price-text">{{ calculateDiscountedPrice(book.basePrice, getDiscoutPercentById(book.discountId)) | currency:'EUR' }}</div>    
+                            <div class="price-text">{{ calculateDiscountedPrice(book.basePrice, book.discountPercent) | currency:'EUR' }}</div>    
                         </div>
                     </div>   
                     <div class="col-lg-2 d-flex align-content-end">
